Picture cropping API introduced Fixes done by sandeep

--- a/public/css/common2.css
+++ b/public/css/common2.css
@@ -505,6 +505,11 @@ hr.style-two {
     height: 80%;
 }
 
+.hpw .height-128
+{
+    height:128px !important;
+}
+
 .hpw .height-100-px
 {
     height:100px;
